--- a/samples/net-core/Demo.FolderBrowserDialog/MainWindow.xaml
+++ b/samples/net-core/Demo.FolderBrowserDialog/MainWindow.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
+    xmlns:md="clr-namespace:MvvmDialogs.Wpf;assembly=MvvmDialogs.Wpf"
     mc:Ignorable="d"
     md:DialogServiceViews.IsRegistered="True"
     WindowStartupLocation="CenterScreen"
@@ -12,7 +12,7 @@
     Width="300"
     Height="200"
     DataContext="{Binding Source={StaticResource Locator}, Path=MainWindow}">
-    
+
     <Window.Resources>
         <ResourceDictionary Source="ApplicationResources.xaml" />
     </Window.Resources>
