--- a/samples/Avalonia/Demo.FolderBrowserDialog/MainWindow.axaml
+++ b/samples/Avalonia/Demo.FolderBrowserDialog/MainWindow.axaml
@@ -5,13 +5,14 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:md="clr-namespace:MvvmDialogs.Avalonia;assembly=MvvmDialogs.Avalonia"
+    xmlns:local="clr-namespace:Demo.FolderBrowserDialog"
     mc:Ignorable="d"
     md:DialogServiceViews.IsRegistered="True"
     WindowStartupLocation="CenterScreen"
     Title="Demo - Folder Browser Dialog"
     Width="300"
-    Height="200">
-    <!-- DataContext="{Binding Source={StaticResource Locator}, Path=MainWindow}" -->
+    Height="200"
+    d:DataContext="{x:Static local:App.MainWindow}">
 
     <Grid VerticalAlignment="Center">
         <Grid.ColumnDefinitions>
@@ -25,6 +26,6 @@
         <Button
             Grid.Column="1"
             Content="Browse..."
-            Command="{Binding BrowseFolderCommand}" />
+            Command="{Binding OpenFolderCommand}" />
     </Grid>
 </Window>
