--- a/samples/Avalonia/Demo.ModalCustomDialog/AddTextDialog.axaml
+++ b/samples/Avalonia/Demo.ModalCustomDialog/AddTextDialog.axaml
@@ -1,6 +1,6 @@
 ﻿<Window
     x:Class="Demo.ModalCustomDialog.AddTextDialog"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,29 +9,22 @@
     Title="Add Text"
     WindowStartupLocation="CenterOwner"
     SizeToContent="WidthAndHeight"
-    ResizeMode="NoResize"
-    d:DataContext="{d:DesignInstance {x:Type local:AddTextCustomDialogViewModel}}">
-
-    <Window.Resources>
-        <ResourceDictionary Source="ApplicationResources.xaml" />
-    </Window.Resources>
+    CanResize="False"
+    d:DataContext="{x:Static local:App.AddTextDialog}">
 
     <StackPanel>
-        <TextBox
-            AutomationProperties.AutomationId="Csl8dP93gUGQLj7rVZxDAg"
-            Text="{Binding Text, UpdateSourceTrigger=PropertyChanged}" />
-        
+        <TextBox Text="{Binding Text}" />
+            <!-- UpdateSourceTrigger=PropertyChanged -->
+
         <StackPanel
             Orientation="Horizontal"
             HorizontalAlignment="Right">
             <Button
-                AutomationProperties.AutomationId="eyRW_87u20qR7QTCypm2RQ"
                 Content="OK"
                 Command="{Binding OkCommand}"
                 IsDefault="True" />
             <Button
-                AutomationProperties.AutomationId="I91auHr_EECzhSZyIfvvzQ"
-                Content="Cancel"
+                Content="Cancel" Command="{Binding Cancel}"
                 IsCancel="True" />
         </StackPanel>
     </StackPanel>
