--- a/samples/Avalonia/Demo.ModalCustomDialog/MainWindow.axaml
+++ b/samples/Avalonia/Demo.ModalCustomDialog/MainWindow.axaml
@@ -1,21 +1,18 @@
 ﻿<Window
     x:Class="Demo.ModalCustomDialog.MainWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:md="clr-namespace:MvvmDialogs.Wpf;assembly=MvvmDialogs.Wpf"
+    xmlns:md="clr-namespace:MvvmDialogs.Avalonia;assembly=MvvmDialogs.Avalonia"
+    xmlns:local="clr-namespace:Demo.ModalCustomDialog"
     mc:Ignorable="d"
     md:DialogServiceViews.IsRegistered="True"
     WindowStartupLocation="CenterScreen"
     Title="Demo - Modal Custom Dialog"
     Width="300"
     Height="200"
-    DataContext="{Binding Source={StaticResource Locator}, Path=MainWindow}">
-
-    <Window.Resources>
-        <ResourceDictionary Source="ApplicationResources.xaml" />
-    </Window.Resources>
+    DataContext="{x:Static local:App.MainWindow}">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -23,18 +20,14 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ListBox
-            AutomationProperties.AutomationId="Vfkrmkr640yWmoMTKUWIbQ"
-            ItemsSource="{Binding Texts}" />
+        <ListBox Items="{Binding Texts}" />
 
         <StackPanel Grid.Row="1">
             <Button
-                AutomationProperties.AutomationId="FHE_oyWqBEq_9TPaU1yPTQ"
                 Command="{Binding ImplicitShowDialogCommand}">
                 <TextBlock Text="Add text using the dialog type locator..." />
             </Button>
             <Button
-                AutomationProperties.AutomationId="Dq9ZjnVdFESxu8StkQ8jMw"
                 Command="{Binding ExplicitShowDialogCommand}">
                 <TextBlock Text="Add text by specifying dialog type..." />
             </Button>
