Allow registering any StyledElement, in case of binding a ViewModel to a section of a window

--- a/samples/Avalonia/Demo.MessageBox/App.axaml
+++ b/samples/Avalonia/Demo.MessageBox/App.axaml
@@ -14,5 +14,8 @@
             <Setter Property="VerticalContentAlignment" Value="Center" />
             <Setter Property="HorizontalContentAlignment" Value="Center" />
         </Style>
+        <Style Selector="TextBlock">
+            <Setter Property="TextWrapping" Value="Wrap" />
+        </Style>
     </Application.Styles>
 </Application>
